<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/TextTitle"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:background="#0BA4EA"
        android:gravity="center"
        android:text="@string/appTitle"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editHeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editHeight"
        android:inputType="numberDecimal"
        android:autofillHints="username" />

    <EditText
        android:id="@+id/editWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editWeight"
        android:inputType="numberDecimal"
        android:autofillHints="username"/>

    <TextView
        android:id="@+id/textResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/testResult" />

    <Button
        android:id="@+id/btnBimCalc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="BtnBimcalc_Click"
        android:text="@string/btnmass" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:background="#03A9F4"
        android:gravity="center"
        android:text="@string/textscop1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/textscop2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:gravity="center"
        android:text="@string/textscop3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:gravity="center"
        android:text="@string/textscop4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:gravity="center"
        android:text="@string/textscop5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:gravity="center"
        android:text="@string/textscop6" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:gravity="center"
        android:text="@string/textscop7" />
</LinearLayout>